Fixed the Overlap Between Footer & ScrollTop

--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -10,6 +10,10 @@
   justify-content: center;
   align-items: center;
   gap: rem(16px);
+
+  @media (min-width: rem(480px)) and (max-width: rem(1080px)) {
+    margin-bottom: rem(40px);
+  }
 }
 
 .footerContainer {
